# v-mouse

./: .clang-format
debugger/: CMakeLists.txt
debugger/include/: DigiMouse.h  temporary_directory.hpp
debugger/pattern/: generator.py
debugger/src/: DigiMouse.cpp  debugger.cpp  main.cpp  temporary_directory.cpp
include/: MyDigiMouse.h  code.hpp  fastmath.hpp  parts.hpp  spiral.hpp
src/: main.cpp  parts.cpp  spiral.cpp
